--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "ember-component-css": "^0.3.7",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
+    "ember-maybe-import-regenerator": "^0.1.6",
     "ember-resolver": "^4.0.0",
+    "ember-route-action-helper": "^2.0.6",
     "ember-source": "~2.16.0",
     "loader.js": "^4.2.3"
   },
